[project]
name = "zhengshang"
version = "0.1.2"
description = "从商客商机接龙中提取关键信息并保存到excel表格中"
readme = "README.md"
authors = [
    { name = "huangyp3gd", email = "huangyp3.gd@chinatelecom.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic",
    "openpyxl",
    "fastmcp==2.3.5",
    "exceptiongroup==1.3.0",
    "click==8.2.1",
    "setuptools==80.8.0",
    "trove-classifiers==2025.5.9.12",
]

[project.scripts]
zhengshang = "zhengshang:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
